Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ steps:
   inputs:
     SourceFolder: '$(agent.builddirectory)'
     Contents: '**'
-    TargetFolder: '$(build.artifactstagingdirectory)'
+    TargetFolder: '$(System.DefaultWorkingDirectory)/_ziqiang-li.SpringBootTest'
     CleanTargetFolder: true
